# Modern-neural-network-technologies_2-semester-mag

Lab1/: main.py  mock.py  requirements.txt
Lab1/core/: __init__.py  history.py
Lab1/native/: Cargo.toml  native.pyi  pyproject.toml
Lab1/native/src/: lib.rs
Lab1/ui/: __init__.py  applications.py  widgets.py
Lab2/: main.ipynb  requirements.txt
Lab3/: main.ipynb
Lab4/: main.ipynb
Lab4/data/: gariki_igor_guberman.txt
