[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
pyo3 = "0.22.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
